--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "docs": "sphinx-autobuild docs docs/_build/html --port 7999",
     "serve-django": "dj r 0.0.0.0:8000",
     "serve-live": "livereload 'tabbycat/' --exts 'css' --exclusions 'tabbycat/static/vue/'",
-    "serve-sass": "npm run build-sass -- --watch --recursive --output-style expanded & npm run build-sass-print -- --watch --recursive --output-style expanded --sourcemap",
+    "serve-sass": "npm run build-sass -- --watch --recursive & npm run build-sass-print -- --watch --recursive --sourcemap",
     "serve-vue": "npx vue-cli-service serve",
     "serve-worker": "dj runworker notifications adjallocation venues",
     "windows-build": "SET NODE_ENV='production' & npm-run-all -p build-* cp-* && cpx \"tabbycat/static/vue/app.js\" \"tabbycat/static/vue/js/\"",
@@ -49,7 +49,7 @@
     "jsbarcode": "^3.11.5",
     "livereload": "^0.9.2",
     "lodash": "^4.17.21",
-    "node-sass": "^5.0.0",
+    "node-sass": "^6.0.0",
     "npm-run-all": "^4.1.5",
     "popper.js": "^1.16.1",
     "quagga": "0.12.x",
